mark events as expired on search page after ending time has passed current time, Added a check for the start and end times, as well as date to ensure correct date and times entry (disallows times that go over onto next day), and added functionality to prevent overlapping events during event creation.

--- a/css/search.css
+++ b/css/search.css
@@ -56,6 +56,11 @@
     width: 80%;
 }
 
+.expiredEvent p
+{
+    opacity: .5;
+}
+
 .close
 {
     color: #aaa;
